--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                 <br>
         </fieldset>
 
+                <!-- Button -->
+
 
         <button type="submit" value="Submit">Sing Up</button>
     </form>
