added transition to focus

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="flex-form">
                 <label for="username" class="label-pat1-form" >Full Name</label>
                     <br>
-                    <input type="text" id="username" name="username" placeholder="Required" class="input-part1-form">
+                    <input type="text" id="username" name="username" placeholder="Required" class="input-part1-form" required>
                 </div>
                 <br>
 
@@ -48,7 +48,7 @@
                 <div class="flex-form">
                     <label for="email" class="label-pat1-form">Email Address</label>
                     <br>
-                    <input type="email" id="email" name="email" placeholder="Required" class="input-part1-form">
+                    <input type="email" id="email" name="email" placeholder="Required" class="input-part1-form" required>
                 </div>
                 <br>
                 
@@ -167,7 +167,7 @@
                 <!-- Button -->
 
 
-        <button type="submit" value="Submit">Sing Up</button>
+        <button type="submit" value="Submit">Sign Up</button>
     </form>
 
     <footer>Copyright The Code Review</footer>
